force-app/main/default/objects/BehaviorCaseWorker__c/BehaviorCaseWorker__c.object-meta.xml
<CustomObject>
    <label>Behavior Case Worker</label>
    <nameField>
        <displayFormat>{YYYY}/{MM}/{DD}-{0}</displayFormat>
        <label>BCW #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Case Workers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>