force-app/main/default/objects/BehaviorCaseWorker__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Behavior Case Workers</relationshipLabel>
    <relationshipName>Behavior_Case_Workers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>