force-app/main/default/objects/BehaviorCaseWorker__c/fields/CaseWorker__c.field-meta.xml
<CustomField>
    <fullName>CaseWorker__c</fullName>
    <label>Case Worker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Behavior Case Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Behavior Case Workers</relationshipLabel>
    <relationshipName>Case_Workers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>