force-app/main/default/objects/BehaviorCaseWorker__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>